@startuml
title Global Pose Process Class Diagram

namespace fast::rf {
  namespace messages {
    namespace SensorMsgs {
      class GlobalPositionSensorMsg <<(M,#FFFF00)>>
    }
    namespace GeometryMsgs {
      class OdomMsg <<(M,#FFFF00)>>
    }
  }
  namespace PoseSystem {
    package GlobalPoseSubsystem #LightYellow;line:blue {
      interface IGlobalPoseProcess #Orange {
        +{abstract} uint8_t get_supported_gps_channel_count()
        +{abstract} bool new_GlobalPositionSensorMsg(uint8_t index, GlobalPositionSensorMsg data)
        +{abstract} OdomMsg get_GlobalPose()
        +{abstract} bool update(double current_time_sec)
      }
      abstract BaseGlobalPoseProcess #Orange {
        +uint8_t get_supported_gps_channel_count()
        +OdomMsg get_GlobalPose()
        +bool base_update(double current_time_sec)
        #OdomMsg globalPose

      }
      BaseGlobalPoseProcess .up.|> IGlobalPoseProcess
      class BasicGlobalPoseProcess #Orange {
        +bool new_GlobalPositionSensorMsg(uint8_t index, GlobalPositionSensorMsg data)
        +bool update(double current_time_sec)
      }
      BasicGlobalPoseProcess -up-|> BaseGlobalPoseProcess
      class DummyGlobalPoseProcess {
        +bool new_GlobalPositionSensorMsg(uint8_t index, GlobalPositionSensorMsg data)
        +bool update(double current_time_sec)
      }
      DummyGlobalPoseProcess -up-|> BaseGlobalPoseProcess
    }
  }
}
@enduml